[project]
name = "agentic-cybersecurity-pipeline"
version = "0.1.0"
description = "An agentic cybersecurity pipeline using LangGraph and LangChain"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langgraph (>=0.3.1,<0.4.0)",
    "streamlit (>=1.42.2,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "typing-extensions (>=4.12.2,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
