[tool.poetry]
name = "agentic-cybersecurity-pipeline"
version = "0.1.0"
description = "An autonomous security testing pipeline built with LangGraph and LangChain"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.19"
langgraph = "^0.3.1"
streamlit = "^1.30.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.3"
loguru = "^0.7.2"
aiohttp = "^3.9.3"
langchain-core = "^0.3.40"
langchain-community = "^0.3.18"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
